--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -8,6 +8,8 @@
           <div class="hero__left">
             <h1 class="hero__title">{{ site.hero.hero__title }}</h1>
             <p class="hero__description">{{ site.hero.hero__description }}</p>
+            <p class="hero__service">{{ site.hero.hero__service }}</p>
+            <p class="hero__contact">{{ site.hero.hero__contact }}</p>
             {% if site.mailchimp == "enable" %}
             <div class="hero__subscribe">
               <form class="subscribe-form validate"
