--- a/_includes/section-tags.html
+++ b/_includes/section-tags.html
@@ -1,5 +1,5 @@
 <!-- begin section-tags -->
-<section class="section section-tags">
+<!--<section class="section section-tags">
   <div class="container">
     <div class="row">
       <div class="col col-12">
@@ -26,5 +26,5 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- end section-tags -->
