--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,8 @@
             </div>
             <h3 class="footer__author-name">{{site.author.author__name}}</h3>
             <p class="footer__author-bio">{{site.author.author__bio}}</p>
+            <a href="https://mbacafewithangela.github.io/Service/">{{ site.author.author__service }}</a>
+            <a href="https://mbacafewithangela.github.io/contact/">{{ site.author.author__contact }}</a>
             {% if site.social %}
             <div class="social">
               <ul class="social__list list-reset">
